--- a/projects/amz-eg/css/cart_style.css
+++ b/projects/amz-eg/css/cart_style.css
@@ -1,9 +1,11 @@
 main {
     /* to grow vertically with added items */
     height: 100%;
+    min-width: 350px;
+
 }
 .main__main__wrapper {
-    width: 100vw;
+    min-width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -18,7 +20,9 @@ main {
     /* background-color: red; */
     /* max-width: 450px; */
     min-width: 350px;
-    max-width: 950px;
+    /* max-width: 950px; */
+    margin: 0 auto;
+
 
 
     display: flex;
@@ -66,6 +70,9 @@ main {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    padding-top: 1rem;
+    border-top: 1px solid var(--cart_bg);
+
 }
 
 .main__main__content__row1--cart--list--item--container {
@@ -73,7 +80,7 @@ main {
     flex-direction: row;
     /* gap: 1rem; */
     align-items: center;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     /* padding: 1rem; */
 
 
@@ -92,12 +99,11 @@ img {
 }
 
 .main__main__content__row1--cart--list--item {
-    border-top: 1px solid var(--cart_bg);
 
     display: flex;
     flex-direction: row;
     align-items: center;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     width: 100%;
     /* gap: 1rem; */
     gap: 0.5rem;
@@ -196,6 +202,7 @@ img {
 
 .main__main__content__row1--extra {
     order: 1;
+    flex: 1;
 }
 
 .row1--extra--proceed {
@@ -285,6 +292,7 @@ img {
     flex-direction: row;
     border-bottom: 1px solid var(--sort-button-grey-border);
     gap: 2rem;
+    justify-content: center;
 }
 
 .main__main__content__row2--tabs a {
@@ -374,13 +382,24 @@ img {
 
 /*////////////////////////////////////////////////////////////////////*/
 
-.main__main__content__row3 {
+.main__main__content__row3__wrapper {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     background-color: #fff;
+    padding-bottom: 3rem;
+}
+.main__main__content__row3 {
+    /* background-color: #fff; */
     padding: 1rem 1.5rem;
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
-
+    /* margin: 0 -0.75rem; */
+    width: 100%;
+    max-width: 1500px;
+    border-bottom: 1px solid var(--sort-button-grey-border);
 }
 
 .main__main__content__row3 h2 {
@@ -399,48 +418,48 @@ img {
     gap: 1rem;
 }
 
-.saved-item--image-container {
+.recommended-item--image-container {
     max-width: 100px;
     max-height: 100px;
     height: fit-content;
     width: 100%;
 }
 
-.saved-item--image-container img {
+.recommended-item--image-container img {
     width: 100%;
     margin-top: 0.25rem;
 }
 
-.saved-item--description {
+.recommended-item--description {
     display: flex;
     flex-direction: column;
     gap: 0.2rem;
 }
 
-.saved-item--description--title {
+.recommended-item--description--title {
     text-decoration: none;
     color: var(--product-rating-blue);
     font-size: 1.1rem;
     font-weight: 400;
 }
 
-.saved-item--description--rating {
+.recommended-item--description--rating {
 
 }
 
-.saved-item--description--price {
+.recommended-item--description--price {
     color: var(--not-available-text);
     text-transform: uppercase;
 
 }
 
-.saved-item--description--only {
+.recommended-item--description--only {
     color: var(--sort-button-text);
     font-size: 0.9rem;
 
 }
 
-.saved-item--description--button {
+.recommended-item--description--button {
     padding: 0.15rem 0.4rem;
     width: fit-content;
     border-radius: 12px;
@@ -460,4 +479,165 @@ img {
 
 .not_available_red {
     color: var(--not-available-text);
+}
+
+
+
+@media screen and (min-width: 550px) {
+
+    .main__main__content {
+        gap: 1.5rem
+    }
+
+    .main__main__content__row1 {
+        flex-direction: row;
+        gap: 1.5rem;
+    }
+
+
+    .main__main__content__row1--cart {
+        order: 1;
+        /* min-width: 350px; */
+        flex: 2;
+
+    }
+
+    .main__main__content__row1--cart--list--item {
+        align-items: flex-start;
+    }
+
+    .cart--list--item--image {
+        height: 20vw;
+        max-height: 180px;
+    }
+
+    .cart--list--item--image img {
+        height: 100%;
+        max-height: 180px;
+    }
+
+    .cart--list--item--description--name, .cart--list--item--description--price {
+        font-size: min(2.5vw, 1.3rem);
+    }
+    .main__main__content__row1--extra {
+        order: 2;
+        flex: 1;
+        max-width: 300px;
+
+    }
+
+    .main__main__content__row1--cart--list--item--container label {
+        order: 0; /**/
+    }    
+
+    .main__main__content__row1--cart--list--item--container {
+        gap: 1rem;
+        padding-left: 1rem;
+    }
+
+
+
+    .row1--extra--proceed--qualify {
+        text-align: left;
+    }
+
+    .row1--extra--proceed-confirm-total {
+        width: 100%;
+    }
+
+    .row1--extra--proceed-confirm {
+        align-items: flex-start;
+    }
+
+    .row1--extra--proceed-submit {
+        width: 100%;
+    }
+
+    .main__main__content__row2 {
+    }
+
+    .main__main__content__row2--tabs {
+        justify-content: flex-start;
+
+        padding: 0 1.75rem;
+    }
+
+    .row2--items-container {
+        flex-direction: row;
+    }
+
+    .saved-item {
+        flex-direction: column;
+        width: auto;
+        gap: 0;
+    }
+
+    .saved-item--description {
+        justify-content: flex-start;
+        padding: 0rem 1rem 1rem 1rem;
+        gap: 0.25rem;
+
+    }
+
+    .saved-item--description--title {
+        font-size: 1.25rem;
+        color: black;
+    }
+
+    .saved-item--image-container {
+        width: 100%;
+        max-width: 220px;
+        max-height: 220px;
+    }
+    .saved-item--image-container img{
+        margin-top: 0;
+        width: 100%;
+
+    }
+
+    .saved-item--description-controls{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .saved-item--description-controls a + a {
+        margin-left: 0;
+    }
+
+
+
+
+    .row3--items-container {
+        flex-direction: row;
+        padding: 0 4rem;
+    }
+
+    .recommended-item {
+        flex-direction: column;
+        max-width: 160px;
+    }
+    .recommended-item--image-container {
+        min-width: 100%;
+        max-height: none;
+    }
+
+    .recommended-item--description--title {
+        font-size: 1rem;
+        color: var(--product-rating-blue);
+    }
+
+    
+
+}
+
+
+@media screen and (min-width: 1500px) {
+    .main__main__content {
+        max-width: 1500px;
+    }
+
+    .main__main__content__row3 {
+        margin: 0;
+    }
+
 }
