--- a/projects/amz-eg/css/item_style.css
+++ b/projects/amz-eg/css/item_style.css
@@ -23,7 +23,7 @@ main {
 
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
+    gap: 1.5rem;
     padding: 2rem 0.75rem;
 }
 
@@ -76,6 +76,31 @@ a {
     background-color: var(--button-orange-hover);
     border: 1px solid var(--button-orange-hover-border);
 }
+
+.white-button {
+    border-radius: 7px;
+    background-color: var(--button-white);
+    border: 1px solid var(--button-white-border);
+    font-weight: 400;
+    box-shadow:  0 2px 5px 0 rgba(213,217,217,.5);
+    color: var(--sort-button-text);
+    text-decoration: none;
+
+}
+
+.white-button:hover {
+    background-color: var(--button-white-hover);
+    border: 1px solid var(--button-white-hover-border);
+
+}
+
+
+.full_width__border {
+    border-bottom: 2px solid var(--sort-button-grey-border);
+    margin: 0 -1rem;
+    padding: 0 1rem 1rem 1rem;
+}
+
 
 /*////////////////////////////////////////////////////////////////////*/
 
@@ -133,7 +158,9 @@ a {
 .content__item__image--container-after {
     position: absolute;
     /* content: url("https://www.amazon.com"); */
-    background-image: url("https://m.media-amazon.com/images/G/01/share-icons/share-std.svg");
+    /* background-image: url("https://m.media-amazon.com/images/G/01/share-icons/share-std.svg"); */
+    background-image: url("../img/share.png");
+
     background-repeat: no-repeat;
     object-fit: contain;
     background-position: center;
@@ -307,7 +334,7 @@ a {
 .content__item__ordering--stock {
     font-size: 1.5rem;
     font-weight: 300;
-    margin-top: 1rem;
+    /* margin-top: 1rem; */
 }
 
 
@@ -369,4 +396,296 @@ a {
     border-radius: 100px;
     font-weight: 300;
     color: var(-sort-button-text);
+}
+
+/*/////////////////////////////////*/
+
+.content__item__other-info {
+    color: var(--product-list-text);
+    font-weight: 300;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    font-size: 0.9rem;
+    /* margin-top: 0.5rem; */
+}
+
+.content__item__other-info > div {
+    display: flex;
+    flex-direction: row;
+}
+
+.content__item__other-info > div > span {
+    flex: 1;
+}
+
+.content__item__other-info > div > span:last-child {
+    color: black;
+}
+
+/*/////////////////////////////////*/
+
+.content__item__free-shipping > div {
+    padding: 1rem;
+    text-align: center;
+    /* margin-top: 0.5rem; */
+    font-weight: 300;
+
+}
+
+
+/*/////////////////////////////////*/
+
+
+.content__item__protection-plan {
+}
+
+.content__item__protection-plan--content {
+    display: flex;
+    flex-direction: row;
+    border-top: 1px solid var(--sort-button-grey-border);
+    border-bottom: 1px solid var(--sort-button-grey-border);
+    padding: 1rem 1rem;
+    gap: 1rem;
+    align-items: center;
+    margin-top: 0.5rem;
+    position: relative;
+
+}
+
+input[type="check"] {
+    accent-color: var(--product-rating-blue);
+
+}
+
+.content__item__protection-plan--content--check {
+    height: 1.5rem;
+    width: 1.5rem;
+}
+
+.content__item__protection-plan--content--info {
+}
+
+.content__item__protection-plan--content--info div {
+    color: var(--product-list-text);
+    font-weight: 300;
+}
+
+.content__item__protection-plan--content--info div:last-child {
+    color: var(--not-available-text);
+    margin-top: 0.25rem;
+}
+
+
+.content__item__protection-plan--content::after {
+    content: "";
+    background-image: url("../img/caret-down.png");
+    height: 2rem;
+    width: 2rem;
+    right: 0;
+    position: absolute;
+    background-repeat: no-repeat;
+    background-position: center;
+    transform: rotate(270deg);   
+}
+
+.content__item__protection-plan--content--add-list {
+    padding: 1rem 0rem;
+}
+
+
+
+/*/////////////////////////////////*/
+
+
+.content__item__seller-options--container {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    position: relative;
+}
+
+.content__item__seller-options::after {
+    content: "";
+    background-image: url("../img/caret-down.png");
+    height: 2rem;
+    width: 2rem;
+    right: 1rem;
+    top: 0;
+    position: absolute;
+    background-repeat: no-repeat;
+    background-position: center;
+    transform: rotate(270deg);   
+}
+
+
+.content__item__seller-options--container h3 {
+    font-weight: 400;
+    color: black;
+}
+
+.content__item__seller-options {
+    font-weight: 300;
+    color: var(--product-list-text);
+    position: relative;
+
+
+}
+
+
+.price-text--seller-options {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    font-size: 0.75rem;
+    margin-top: 0.5rem;
+}
+
+.price-text--seller-options span:nth-of-type(2) {
+    font-size: 1.5rem;
+    margin-top: -0.25rem;
+}
+
+.content__item__seller-options-note {
+    font-weight: 300;
+    padding-top: 0.5rem;
+}
+
+/*/////////////////////////////////*/
+
+.content__item__icons {
+    display: flex;
+    flex-direction: row;
+    font-size: 0.9rem;
+}
+
+.content__item__icons a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.content__item__icons a > img {
+    max-width: 35px;
+}
+
+/*/////////////////////////////////*/
+
+.content__item__details-list h3 {
+    font-weight: 400;
+}
+
+.content__item__details-list ul {
+    font-weight: 300;
+    color: var(--product-list-text);
+    
+}
+
+.content__item__details-list ul li {
+    display: flex;
+    flex-direction: row;
+    margin-top: 1rem;
+
+}
+
+.content__item__details-list ul li span {
+    width: 100%;
+}
+
+.content__item__details-list ul li span:last-child {
+    color: black;
+}
+
+
+
+/*/////////////////////////////////*/
+
+
+.content__item__manufacturer-notes {
+    font-weight: 300;
+    word-spacing: 0.1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.content__item__manufacturer-notes h4 {
+    color: black;
+    font-size: 1.1rem;
+    letter-spacing: 0.25px;
+    font-weight: 500;
+    margin-bottom: 0.5rem;
+}
+
+
+
+/* start of : align list text without wrapping on list style circle */
+.content__item__manufacturer-notes--features dl {
+    list-style-type: none;
+    padding: 0 1rem;
+}
+
+.content__item__manufacturer-notes--features dl li {
+    list-style-type: none;
+    position: relative;
+    padding-left: 0px;
+    margin-top: 0.5rem;
+}
+
+.content__item__manufacturer-notes--features dl li::before {
+    content: ' ';
+    display: block;
+    width: 5px;
+    height: 5px;
+    background: black;
+    border-radius: 100px;
+    position: absolute;
+    top: 0.4rem;
+    left: -15px;
+
+}
+/* end of : align list text without wrapping on list style circle */
+
+
+
+.content__item__manufacturer-notes--intro--text, 
+.content__item__manufacturer-notes--description,
+.content__item__manufacturer-notes--features dl li {
+
+    color: var(--product-list-text);
+}
+
+
+.content__item__manufacturer-notes--intro--image {
+    width: 80%;
+    margin: 0 auto;
+    margin-bottom: 2rem;
+}
+
+.content__item__manufacturer-notes--intro--image img {
+    max-width: 100%;
+}
+
+
+
+.content__item__manufacturer-notes--information-table table {
+    border-bottom: 1px solid var(--sort-button-grey-border);
+    border-top: 1px solid var(--sort-button-grey-border);
+    border-collapse:collapse;
+    font-weight: 300;
+    color: var(--sort-button-text);
+}
+
+.content__item__manufacturer-notes--information-table table tr td {
+    padding: 1rem;
+}
+
+.content__item__manufacturer-notes--information-table table tr {
+    border-bottom: 1px solid var(--sort-button-grey-border);
+}
+
+.content__item__manufacturer-notes--information-table td:first-of-type {
+    background-color: var(--sort-button-grey);
+
 }
